# musical-instrument-manual-qa

./: .env.template  .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  PATCH_ADVISOR_IMPLEMENTATION.md  README.md  TESTING.md  app.py  pyproject.toml  run.bat  run.sh  test_setup.py
backend/: pytest.ini
backend/app/: main.py
backend/app/api/models/: schemas.py
backend/app/api/routes/: manuals.py  patch_advisor.py  qa.py  stats.py
backend/app/core/: config.py  dependencies.py
backend/app/services/patch_advisor/: __init__.py  agents.py  state.py
backend/app/services/pdf_processor/: __init__.py  module_detector.py  pdf_extractor.py
backend/app/services/rag_pipeline/: __init__.py  qa_system.py
backend/app/services/synthesis_knowledge/: __init__.py  module_taxonomy.yaml  patch_templates.yaml  sound_types.yaml
backend/app/services/vector_db/: chroma_manager.py  module_inventory.py
backend/tests/: __init__.py  conftest.py  test_pdf_extractor.py
backend/tests/test_api/: test_manuals_routes.py
frontend/: index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: MermaidDiagram.tsx  ModuleAvailability.tsx  PatchAdvisorTab.tsx  PatchInstructions.tsx
frontend/src/hooks/: useManuals.ts  usePatchAdvisor.ts  useQA.test.ts  useQA.ts  useStats.test.ts  useStats.ts
frontend/src/services/: api.test.ts  api.ts
frontend/src/types/: index.ts
src/rag_pipeline/: qa_system.py
src/ui/: __init__.py  main_interface.py
src/vector_db/: __init__.py
